--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="theme-color" content="#2e2a8f" />
-    <link href="../images/faivicon.jpg" rel="icon" />
-    <link href="../css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../css/plugin.min.css" rel="stylesheet" />
-    <link href="../css/all.min.css" rel="stylesheet" />
+    <link href="images/faivicon.jpg" rel="icon" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/plugin.min.css" rel="stylesheet" />
+    <link href="css/all.min.css" rel="stylesheet" />
     <link
       href="../css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
