--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="theme-color" content="#2e2a8f" />
     <link href="images/faivicon.jpg" rel="icon" />
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/plugin.min.css" rel="stylesheet" />
-    <link href="css/all.min.css" rel="stylesheet" />
+    <link href="bootstrap.min.css" rel="stylesheet" />
+    <link href="plugin.min.css" rel="stylesheet" />
+    <link href="all.min.css" rel="stylesheet" />
     <link
       href="../css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link href="../css/style.css" rel="stylesheet" />
-    <link href="../css/responsive.css" rel="stylesheet" />
-    <link href="../css/darkmode.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
+    <link href="responsive.css" rel="stylesheet" />
+    <link href="darkmode.css" rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/d6c52fc1e8.js"
       crossorigin="anonymous"
