--- a/html/contact.html
+++ b/html/contact.html
@@ -316,7 +316,7 @@
                 <a href="contact.html" class="btn-main bg-btn2 lnk"
                   >Get In Touch With Us</a
                 >
-                <a href="#" class="btnwithiconside d-flex gap10 v-center">
+                <a href="whatsapp://send?phone=+919302447001" class="btnwithiconside d-flex gap10 v-center">
                   <img src="../images/whatsapp.svg" alt="whatsapp" />
                   <div class="text-white">
                     <span class="text-white">Or - Just Give Us A Call:</span
@@ -333,26 +333,9 @@
     </section>
 
     <footer>
-      <div class="footer-row2 pb20 bg-light-f7">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-12 col-sm-12 text-center">
-              <a class="navbar-brand img-ctr" href="#">
-                <img src="../images/logo.png" alt="Logo" width="auto"
-              /></a>
-              <ul class="footer-link-v2 link-hover mt20">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About us</a></li>
-                <li><a href="products.html">Our Products</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <hr class="hline" />
-      <div class="footer-row3 bg-blue">
+
+      <div class="footer-row3"  style="background: rgb(184,182,228);
+      background: linear-gradient(90deg, rgba(184,182,228,1) 0%, rgba(148,80,199,1) 25%, rgba(226,2,184,1) 70%, rgba(85,67,181,1) 100%, rgba(50,165,195,1) 100%, rgba(201,96,236,1) 100%);">
         <div class="copyright">
           <div class="container">
             <div class="row">
@@ -361,13 +344,13 @@
                   <a href="javascript:void(0)" target="blank"
                     ><i class="fab fa-facebook"></i
                   ></a>
-                  <a href="javascript:void(0)" target="blank"
+                  <a href="https://twitter.com/manasvitech01" target="blank"
                     ><i class="fab fa-twitter"></i
                   ></a>
-                  <a href="javascript:void(0)" target="blank"
+                  <a href="https://instagram.com/manasvi.technologies?igshid=NTc4MTIwNjQ2YQ==" target="blank"
                     ><i class="fab fa-instagram"></i
                   ></a>
-                  <a href="javascript:void(0)" target="blank"
+                  <a href="https://www.linkedin.com/in/manasvi-technologies-7aa426262" target="blank"
                     ><i class="fab fa-linkedin"></i
                   ></a>
                 </div>
