--- a/html/contact.html
+++ b/html/contact.html
@@ -202,6 +202,66 @@
               </p>
             </div>
             <div class="form-block">
+              <form class="shake" id="contact-form">
+                <div class="row">
+                  <div class="form-group col-sm-6">
+                    <input
+                      type="text"
+                      name="name"
+                      placeholder="Enter name"
+                      required=""
+                      data-error="Please fill Out"
+                    />
+                    <div class="help-block with-errors"></div>
+                  </div>
+                  <div class="form-group col-sm-6">
+                    <input
+                      type="email"
+                      name="email"
+                      placeholder="Enter email"
+                      required=""
+                    />
+                    <div class="help-block with-errors"></div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="form-group col-sm-6">
+                    <input
+                      type="text"
+                      name="mobile"
+                      placeholder="Enter mobile"
+                      required=""
+                      data-error="Please fill Out"
+                    />
+                    <div class="help-block with-errors"></div>
+                  </div>
+                  <div class="form-group col-sm-6">
+                    <select name="category" value="category" required="">
+                      <option value="selected">Select Services</option>
+                      <option value="Website Designing">Website Designing</option>
+                      <option value="Software Development">Software Development</option>
+                      <option value="Mobile App Development">Mobile App Development</option>
+                    </select>
+                    <div class="help-block with-errors"></div>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <textarea
+                    name="message"
+                    rows="5"
+                    placeholder="Enter your message"
+                    required=""
+                  ></textarea>
+                  <div class="help-block with-errors"></div>
+                </div>
+                <button type="submit" class="btn lnk btn-main bg-btn">
+                  Submit <span class="circle"></span>
+                </button>
+                <div class="h3 text-center hidden"></div>
+                <div class="clearfix"></div>
+              </form>
+            </div>
+          <!--   <div class="form-block">
               <form class="shake">
                 <div class="row">
                   <div class="form-group col-sm-6">
@@ -258,7 +318,7 @@
                 <div class="h3 text-center hidden"></div>
                 <div class="clearfix"></div>
               </form>
-            </div>
+            </div> -->
           </div>
           <div class="col-lg-5 v-center">
             <div class="contact-details">
@@ -428,6 +488,67 @@
           $("#leadModal").modal("show");
         }, delayMs);
       });
+    </script>
+    <script>
+     
+       const submitForm = async (event) => {
+      event.preventDefault();
+
+      // Get form values
+      const name = document.querySelector('input[name="name"]').value;
+      const email = document.querySelector('input[name="email"]').value;
+      const mobile = document.querySelector('input[name="mobile"]').value;
+      const category = document.querySelector('select[name="category"]').value;
+      const message = document.querySelector('textarea[name="message"]').value;
+
+      // Create an object with the form data
+      const formData = {
+        name,
+        email,
+        mobile,
+        category,
+        message,
+      };
+
+      try {
+        // Make a POST request to your Node.js API
+        const response = await fetch('https://manasvibackend-production-0c53.up.railway.app/api/contact', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify(formData),
+        });
+        console.log(response)
+
+        if (response.ok) {
+
+          contactForm.reset()
+          // Successful response
+          const responseData = await response.json();
+          console.log('API response:', responseData);
+          // Handle success, e.g., display a success message
+          document.querySelector('.h3.text-center.hidden').textContent =
+            'Thank you for contacting us! We will be in touch with you shortly.';
+        } else {
+          // Error response
+          console.error('API error:', response.statusText);
+          // Handle the error, e.g., display an error message
+          document.querySelector('.h3.text-center.hidden').textContent =
+            'Error submitting the form. Please try again.';
+        }
+      } catch (error) {
+        // Network or other unexpected errors
+        console.error('Network error:', error);
+        // Handle the error, e.g., display an error message
+        document.querySelector('.h3.text-center.hidden').textContent =
+          'An unexpected error occurred. Please try again later.';
+      }
+    };
+
+    // Add a form submit event listener
+    const contactForm = document.getElementById('contact-form');
+    contactForm.addEventListener('submit', submitForm);
     </script>
   </body>
 </html>
