--- a/html/contact.html
+++ b/html/contact.html
@@ -328,7 +328,7 @@
                   <div class="info-body mt10">
                     <a href="skype:niwax.company?call"
                       >84,85 First Floor, Raj Business Park-3, Minal Residency
-                      Gate 2 JK Road.(462023)</a
+                      Gate 2 JK Road.(462023) Bhopal Madhya Pradesh</a
                     >
                   </div>
                 </div>
